# ac215_project

./: .gitignore  README.md  compose.yaml
notebook/: 01_explore_us_accidents.ipynb
src/data/: Dockerfile  README.md  csv_to_parquet.py  pyproject.toml
src/datapipeline/: Dockerfile  README.md  csv_to_parquet.py  entrypoint.sh  preprocess.py  pyproject.toml
src/model/: Dockerfile  README.md  docker-shell.sh  entrypoint.sh  pyproject.toml  train.py
src/ui/: Dockerfile  README.md  docker-shell.sh  entrypoint.sh  pyproject.toml
