[project]
name = "accimap-data"
version = "0.1.0"
description = "Data pipeline for AcciMap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.4.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "h3>=4.0.0",
    "pytz>=2023.3",
    "holidays>=0.34",
]
